helmfile/apps/ollama/network-policies/allow-egress-ingress-port-11434.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-ingress-port-11434
  namespace: icbr-poc-ai-endpoint
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 11434
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "icbr-poc-ai-endpoint"
      ports:
        - protocol: TCP
          port: 11434
