helmfile/apps/ollama/network-policies/allow-egress-port-443.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-port-443
  namespace: icbr-poc-ai-endpoint
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ollama
  policyTypes:
    - Egress
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 443
